--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^1.1.3",
     "colors": "^1.1.2",
     "confirm-simple": "^1.0.3",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.2",
     "enzyme": "^2.3.0",
     "es6-promise": "^3.2.1",
@@ -39,7 +40,8 @@
     "lodash": "^4.12.0",
     "md5": "^2.1.0",
     "moment": "^2.12.0",
-    "mongoose": "^4.4.19",
+    "mongoose": "^4.5.10",
+    "mongoose-unique-validator": "^1.0.2",
     "mustache": "^2.2.1",
     "nodemon": "^1.9.2",
     "passport": "^0.3.2",
@@ -50,9 +52,11 @@
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-infinite": "^0.9.0",
+    "react-notification": "^6.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-select": "^1.0.0-beta13",
+    "redis": "^2.6.2",
     "redux": "^3.3.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.0",
