--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "dependencies": {
         "bluebird": "^3.5.3",
         "chalk": "^2.4.1",
+        "eslint": "^5.10.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-node": "^8.0.0",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "lodash": "^4.17.11",
         "module-alias": "^2.1.0",
         "rimraf": "^2.6.2",
         "yargs": "^8.0.2"
@@ -22,6 +29,8 @@
         "@src": "./src",
         "@lib": "./src/lib"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "js-yaml": "^3.12.0"
+    },
     "description": ""
 }
