--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@devcrush/deployer",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "main": "bin/deploy.js",
     "bin": {
         "deployer": "./bin/deploy.js"
@@ -10,11 +10,13 @@
         "lint-fix": "eslint . --fix"
     },
     "keywords": ["docker", "deploy", "ansible"],
+    "description": "A simple service for deploying Node.js docker containers easily.",
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bluebird": "^3.7.2",
         "chalk": "^3.0.0",
+        "js-yaml": "^3.13.1",
         "lodash": "^4.17.15",
         "module-alias": "^2.2.2",
         "rimraf": "^3.0.0",
@@ -33,8 +35,7 @@
         "eslint-plugin-node": "^10.0.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "eslint": "^6.7.2",
-        "js-yaml": "^3.13.1"
-    },
-    "description": "A simple service for deploying Node.js docker containers easily."
+        "eslint": "^6.7.2"
+
+    }    
 }
