Ansible: force-build the docker image on deploy

--- a/ansible/roles/deploy.docker/tasks/main.yml
+++ b/ansible/roles/deploy.docker/tasks/main.yml
@@ -9,6 +9,8 @@
   docker_image:
      path: "~/{{checkoutFolderName}}"
      name: "{{containerName}}"
+     force: yes
+     state: present
 
 - name: Run Docker Container
   docker_container:
