--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@devcrush/deployer",
-    "version": "1.2.2",
+    "version": "1.3.0",
     "main": "bin/deploy.js",
     "bin": {
         "deployer": "./bin/deploy.js"
@@ -9,7 +9,11 @@
         "lint": "eslint .",
         "lint-fix": "eslint . --fix"
     },
-    "keywords": ["docker", "deploy", "ansible"],
+    "keywords": [
+        "docker",
+        "deploy",
+        "ansible"
+    ],
     "description": "A simple service for deploying Node.js docker containers easily.",
     "author": "",
     "license": "ISC",
@@ -36,6 +40,5 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
         "eslint": "^6.7.2"
-
-    }    
+    }
 }
